Base: Align text properly next to icon in version page

--- a/Base/res/ladybird/templates/version.html
+++ b/Base/res/ladybird/templates/version.html
@@ -7,6 +7,10 @@
             html {
                 color-scheme: light dark;
             }
+            header {
+                display: flex;
+                align-items: center;
+            }
             img {
                 float: left;
                 margin-right: 10px;
