LibWeb: Paint root symbol on `<msqrt>` and `<mroot>` elements
We don't yet do any proper MathML layout, so instead we have a small CSS
hack to position the child element correctly.

Co-authored-by: Bernardo Ferrari <bernaferrari2@gmail.com>

--- a/Libraries/LibWeb/MathML/Default.css
+++ b/Libraries/LibWeb/MathML/Default.css
@@ -116,3 +116,10 @@ munderover[accent="true" i] > :first-child {
 mmultiscripts > mprescripts ~ :nth-child(even) {
   math-shift: inherit;
 }
+
+/* FIXME: AD-HOC rules until we implement actual MathML layout */
+mroot > :first-child,
+msqrt > :first-child {
+  margin-left: 0.6em;
+  margin-right: 0.05em;
+}
