--- a/Libraries/LibWeb/CSS/Default.css
+++ b/Libraries/LibWeb/CSS/Default.css
@@ -38,6 +38,8 @@ textarea {
     padding: 2px;
     display: inline-block;
     overflow: auto;
+    overflow-wrap: break-word;
+    white-space-collapse: break-spaces;
     font-family: monospace;
 }
 
@@ -663,8 +665,6 @@ input:is([type=radio i], [type=checkbox i], [type=reset i], [type=button i],
 [type=submit i], [type=color i], [type=search i]), select, button {
     box-sizing: border-box;
 }
-
-textarea { white-space: pre-wrap; }
 
 /* 15.3.11 The hr element
  * https://html.spec.whatwg.org/multipage/rendering.html#the-hr-element-2
